kustomize/base/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: rabbitmq }
spec:
  replicas: 1
  selector: { matchLabels: { app: rabbitmq } }
  template:
    metadata: { labels: { app: rabbitmq } }
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata: { name: rabbitmq }
spec:
  selector: { app: rabbitmq }
  ports:
    - port: 5672
      targetPort: 5672
    - port: 15672
      targetPort: 15672
