kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reality
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts: [ "example.com" ]
      secretName: reality-tls
  rules:
    - host: example.com
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service: { name: reality-realtime, port: { number: 8090 } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: reality-gateway, port: { number: 8080 } }
